<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".ui.MainActivity">

    <com.youth.banner.Banner
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/banner"/>

    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/banner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:srcCompat="@drawable/ic_allocate_cargo_list"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:onClick="onClick"/>

    <TextView
            android:text="@string/allocate_cargo_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            />

    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:srcCompat="@drawable/ic_transport_route"
            android:onClick="onClick"/>

    <TextView
            android:text="@string/transport_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            />

    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:srcCompat="@drawable/ic_loss_report"
            android:onClick="onClick"/>

    <TextView
            android:text="@string/loss_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            />

    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:srcCompat="@drawable/ic_risk_reporting"
            android:onClick="onClick"/>

    <TextView
            android:text="@string/risk_reporting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            />

    <TextView
            android:text="@string/completed_delivery_order"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:paddingLeft="8dp"
            android:background="@color/color_008577"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"/>

    <TextView
            android:text="更多>>"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:textColor="@android:color/white"
            />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            >

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:listitem="@layout/layout_delivery_task_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>